--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=launcehub
 
-spring.datasource.url=jdbc:mysql://root:etQefmjtDhGjQPXzRoqpKaVWoAJTSSlr@ballast.proxy.rlwy.net:37073/freelance_db
+spring.datasource.url=jdbc:mysql://root:jRypzGUPXgTYfYbFhexsLlkMycjIRBPx@metro.proxy.rlwy.net:30592/railway
 spring.datasource.username=root
-spring.datasource.password=etQefmjtDhGjQPXzRoqpKaVWoAJTSSlr
+spring.datasource.password=jRypzGUPXgTYfYbFhexsLlkMycjIRBPx
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
